# WindowsDrive

./: .gitignore  CMakeLists.txt  README.md  appimge2deb.py  config.h.in
debian/: changelog  control  control.appimage  control.normal  rules  rules.appimage  rules.normal
res/: WindowsDrive_zh_CN.ts  app.plist.in  app.qrc  autostart.desktop  build.sh  build_appimage.sh  build_dmg.sh  icon.icns  mkicns.sh  ts.qrc  windows-drive.desktop
res/en.lproj/: InfoPlist.strings
res/zh.lproj/: InfoPlist.strings  locversion.plist
src/: drivebutton.cpp  drivebutton.h  drivebutton.ui  fuck_stupid_lupdate.cpp  functhread.cpp  functhread.h  handlereply.cpp  handlereply.h  loading_dialog.cpp  loading_dialog.h  mac_utils.h  mac_utils.mm  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  networkmanager.cpp  networkmanager.h  ntmounteddevices.cpp  ntmounteddevices.h  ntregf.cpp  ntregf.h  passwddialog.cpp  passwddialog.h  passwddialog.ui  qapp.cpp  qapp.h  qsiapplication.cpp  qsiapplication.h  settingsdialog.cpp  settingsdialog.ui  utils.cpp  utils.h  wd_helper.cpp
src/ntregf/: CMakeLists.txt  ntregf_cmd.cpp
tests/: CMakeLists.txt  test  test_main  test_main.cpp
